# transformer-from-scratch-rs

./: Cargo.toml  README.md  tokenizer_en.json  tokenizer_it.json
src/: config.rs  dataset.rs  decoder.rs  encoder.rs  feed_forward.rs  layer_norm.rs  main.rs  multi_head_attention.rs  projection_layer.rs  residual_connection.rs  tokenizer_helper.rs  train.rs  transformer.rs  utils.rs
src/embeddings/: input_embedding.rs  mod.rs  positional_embedding.rs
